--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -35,7 +35,7 @@
             <a class="nav-link" routerLink="/login" (click)="collapseNavbar()">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/register" (click)="collapseNavbar()">Sign in</a>
+            <a class="nav-link" routerLink="/account/register" (click)="collapseNavbar()">Sign in</a>
           </li>
         </ng-container>
 
